--- a/ShiuBulimiaSnake/MainViewController/MainViewController.xib
+++ b/ShiuBulimiaSnake/MainViewController/MainViewController.xib
@@ -21,16 +21,37 @@
                     <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pnF-6l-Iss">
-                    <rect key="frame" x="31" y="376" width="46" height="30"/>
-                    <state key="normal" title="Button"/>
+                    <rect key="frame" x="141" y="488" width="38" height="30"/>
+                    <state key="normal" title="down"/>
                     <connections>
-                        <action selector="test:" destination="-1" eventType="touchUpInside" id="axG-bd-kvG"/>
+                        <action selector="downButtonAction:" destination="-1" eventType="touchUpInside" id="Fwu-U6-7KJ"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="emP-ch-CF6">
+                    <rect key="frame" x="141" y="372" width="30" height="30"/>
+                    <state key="normal" title="up"/>
+                    <connections>
+                        <action selector="upButtonAction:" destination="-1" eventType="touchUpInside" id="CKT-6f-hth"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Xm-0h-cNz">
+                    <rect key="frame" x="69" y="424" width="30" height="30"/>
+                    <state key="normal" title="left"/>
+                    <connections>
+                        <action selector="leftButtonAction:" destination="-1" eventType="touchUpInside" id="eiy-eF-nfh"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9mQ-Th-V3X">
+                    <rect key="frame" x="219" y="424" width="32" height="30"/>
+                    <state key="normal" title="right"/>
+                    <connections>
+                        <action selector="rightButtonAction:" destination="-1" eventType="touchUpInside" id="d3M-iq-6Gm"/>
                     </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-            <point key="canvasLocation" x="98" y="310"/>
+            <point key="canvasLocation" x="-52" y="310"/>
         </view>
     </objects>
 </document>
